kubernetes/chat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          imagePullPolicy: Never
          image: chat:latest
          ports:
            - containerPort: 3000
              name: chat

---
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
  ports:
    - name: chat
      protocol: TCP
      port: 3000
      targetPort: chat
